--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,7 @@
   .selfie {
     height: 250px;
     margin-top: 7ex;
-    margin-bottom: 7ex;
-    border-radius: 50%;
+    border-radius: 10px 100px / 120px;
   }
 
   .banner-text {
@@ -104,4 +103,23 @@
   .contact-list i {
     font-size: 50px;
     padding-right: 5rem;
+  }
+
+  .aboutme-body {
+    margin: auto;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 2em;
+  }
+
+  .aboutme-grid {
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    height: 550px;
+    background: white;
+    color: black;
+    margin-bottom:20px;
   }
